<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/main_button_movies"
        android:layout_width="212dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_movies"
        app:layout_constraintBottom_toTopOf="@+id/main_button_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_button_series"
        android:layout_width="212dp"
        android:layout_height="52dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_series"
        app:layout_constraintBottom_toTopOf="@+id/main_button_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_button_games"
        android:layout_width="212dp"
        android:layout_height="52dp"
        android:text="@string/button_games"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_button_favo"
        android:layout_width="212dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/longreach"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/main_button_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:fontFamily="@font/longreach"
        android:text="@string/my_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>